<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/neighbour_detail_id"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity">


    <ImageView
        android:id="@+id/activity_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/activity_neighbour_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/activity_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/activity_profile_picture" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/activity_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/activity_neighbour_name2"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="Caroline" />


                    <TextView
                        android:id="@+id/activity_neighbour_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_location_on_24"
                        android:drawablePadding="16dp"
                        android:padding="8dp"
                        tools:text="31 Avenue André Morizet" />

                    <TextView
                        android:id="@+id/activity_number_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                        android:drawablePadding="16dp"
                        android:padding="8dp"
                        tools:text="0689798871" />

                    <TextView
                        android:id="@+id/activity_facebook_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_language_24"
                        android:drawablePadding="16dp"
                        android:padding="8dp"
                        tools:text="www.facebook.fr/Caroline" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_about_me_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/neighbour_detail_activity_about_me"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/activity_about_me"
                        android:layout_width="390dp"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        tools:text="j'aime la randonnée et la marche nordique........" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Button_For_Add_Favoris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/button_for_add_favoris"
        android:focusable="true"
        android:tint="@color/gold"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star" />
</android.support.constraint.ConstraintLayout>




